refactored + added tests